fixed stats text overflow

--- a/style.css
+++ b/style.css
@@ -43,10 +43,9 @@ button{
     height: 45px;
     background-color: black;
     color: white;
-    font-size: 20px;
+    font-size: 23px;
     padding-top: 12px;
     padding-left: 10px;
-    padding-right: 10px;
 }
 
 .stats-text{
@@ -60,6 +59,7 @@ button{
     padding-top: 8px;
     padding-left: 10px;
     padding-bottom: 5px;
+    overflow:hidden;
 }
 
 @keyframes fadein {
